# find-me-a-recipe

./: .dockerignore  .gitignore  CONTRIBUTING.md  DESIGN_SYSTEM.md  LICENSE  Makefile  PERFORMANCE.md  Pipfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  requirements.txt  test.js
client/: .env  .env.production  package-lock.json  package.json  tsconfig.json
client/public/: index.html
client/public/data/: presetIngredients.json
client/src/: App.js  App.tsx  BasicConfigFridge.js  FieldAddingIngredients.js  FieldAddingIngredients.tsx  FieldSearchRecipe.js  FieldSearchRecipe.tsx  Filter.js  FilterButton.js  Fridge.css  Fridge.js  Fridge.tsx  Ingredient.js  Ingredient.tsx  Recipe.js  ResponsiveButton.js  SearchBar.js  SearchBarIngredients.js  SearchBarIngredients.tsx  SelectPresetIngredient.js  SelectPresetIngredient.tsx  Submit.js  Submit.tsx  animation_test.js  declaration.d.ts  index.tsx  setupProxy.js
client/src/__tests__/: LanguageContext.test.tsx  Recipe.test.tsx  recipeCache.test.ts
client/src/components/: FavoritesGrid.tsx  FieldAddingIngredients.tsx  FieldSearchRecipe.tsx  FilterButton.tsx  Fridge.tsx  HistorySidebar.tsx  Ingredient.tsx  LanguageSwitch.tsx  Recipe.js  Recipe.tsx  ResponsiveButton.js  (+4 more)
docs/: README.md
find-me-a-recipe/: package-lock.json  package.json
find-me-a-recipe/public/: index.html
find-me-a-recipe/src/: App.js  get_data.js
flask-server/: Dockerfile  app.py  image_scraper.py  marmiton.py  pyproject.toml  requirements.txt  test.py  test_app.py  translator.py
scripts/: setup-poetry.sh  start.js
(+24 files in other folders)
