[tool.poetry]
name = "flask-server"
version = "0.1.0"
description = "Backend for find-me-a-recipe"
authors = ["Thibault <thibault.nieuviarts@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aiosignal = "1.3.1"
attrs = "24.2.0"
beautifulsoup4 = "4.12.3"
blinker = "1.8.2"
certifi = "2024.8.30"
click = "8.1.7"
distlib = "0.3.8"
filelock = "3.15.4"
Flask = "3.0.3"
frozenlist = "1.4.1"
h11 = "0.14.0"
idna = "3.8"
itsdangerous = "2.2.0"
Jinja2 = "3.1.4"
MarkupSafe = "2.1.5"
multidict = "6.0.5"
numpy = "2.1.1"
outcome = "1.3.0.post0"
pipenv = "2024.0.1"
platformdirs = "4.2.2"
PySocks = "1.7.1"
setuptools = "74.1.2"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
soupsieve = "2.6"
trio = "0.26.2"
trio-websocket = "0.11.1"
typing_extensions = "4.12.2"
urllib3 = "2.2.2"
virtualenv = "20.26.3"
websocket-client = "1.8.0"
Werkzeug = "3.0.4"
wsproto = "1.2.0"
yarl = "1.9.11"
requests = "2.31.0"
flask-cors = "4.0.0"
flask-caching = "2.1.0"
deep-translator = "1.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
